--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
             <p class="note">Preview: 30s per track</p>
           </div>
         </div>
-        <button class="purchase-btn-top" onclick="purchaseAlbum()">Buy for $10.99</button>
+        <button class="purchase-btn-top" onclick="purchaseAlbum()">Buy $10.99</button>
       </div>
       <div class="track-scroll-container">
         <div class="track-list">
