--- a/main.html
+++ b/main.html
@@ -128,7 +128,7 @@
 
     <div class="shopify-products">
       <h2>Merch & Products</h2>
-      <div id="shopify-embed"><div id='collection-component-1748286221106'></div>
+      <div id="shopify-embed"><div id='collection-component-1748287450616'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
 (function () {
@@ -157,7 +157,7 @@
     ShopifyBuy.UI.onReady(client).then(function (ui) {
       ui.createComponent('collection', {
         id: '511679234362',
-        node: document.getElementById('collection-component-1748286221106'),
+        node: document.getElementById('collection-component-1748287450616'),
         moneyFormat: '%24%7B%7Bamount%7D%7D',
         options: {
   "product": {
@@ -186,14 +186,15 @@
         "color": "#d0ffc0"
       },
       "button": {
-        "color": "#000000",
+        "font-weight": "bold",
+        "color": "#3e019a",
         ":hover": {
-          "color": "#000000",
-          "background-color": "#000000"
+          "color": "#3e019a",
+          "background-color": "#bbe6ad"
         },
-        "background-color": "#000000",
+        "background-color": "#d0ffc0",
         ":focus": {
-          "background-color": "#000000"
+          "background-color": "#bbe6ad"
         }
       },
       "price": {
@@ -235,14 +236,15 @@
         }
       },
       "button": {
-        "color": "#000000",
+        "font-weight": "bold",
+        "color": "#3e019a",
         ":hover": {
-          "color": "#000000",
-          "background-color": "#000000"
+          "color": "#3e019a",
+          "background-color": "#bbe6ad"
         },
-        "background-color": "#000000",
+        "background-color": "#d0ffc0",
         ":focus": {
-          "background-color": "#000000"
+          "background-color": "#bbe6ad"
         }
       },
       "title": {
@@ -278,14 +280,15 @@
   "cart": {
     "styles": {
       "button": {
-        "color": "#000000",
+        "font-weight": "bold",
+        "color": "#3e019a",
         ":hover": {
-          "color": "#000000",
-          "background-color": "#000000"
+          "color": "#3e019a",
+          "background-color": "#bbe6ad"
         },
-        "background-color": "#000000",
+        "background-color": "#d0ffc0",
         ":focus": {
-          "background-color": "#000000"
+          "background-color": "#bbe6ad"
         }
       }
     },
@@ -297,22 +300,23 @@
   "toggle": {
     "styles": {
       "toggle": {
-        "background-color": "#000000",
+        "font-weight": "bold",
+        "background-color": "#d0ffc0",
         ":hover": {
-          "background-color": "#000000"
+          "background-color": "#bbe6ad"
         },
         ":focus": {
-          "background-color": "#000000"
+          "background-color": "#bbe6ad"
         }
       },
       "count": {
-        "color": "#000000",
+        "color": "#3e019a",
         ":hover": {
-          "color": "#000000"
+          "color": "#3e019a"
         }
       },
       "iconPath": {
-        "fill": "#000000"
+        "fill": "#3e019a"
       }
     }
   }
