--- a/unlocked.html
+++ b/unlocked.html
@@ -109,6 +109,17 @@
           </div>
         </div>
       </div>
+      <div class="unlock-banner">
+        <p>Thanks again for your purchase.</p>
+        <a href="downloads/CAEV_JUNGLEJUXE_2025.zip" download>
+          <button>Download Album (.zip)</button>
+        </a>
+      </div>
+    </div>
+
+    <div class="shopify-products">
+      <h2>Merch & Products</h2>
+      <div id="shopify-embed">[Shopify integration placeholder]</div>
     </div>
   </main>
 
