--- a/unlocked.html
+++ b/unlocked.html
@@ -143,7 +143,7 @@
 </script>
 
     
-    <div class="shopify-products">
+    <div class="shopify-container">
       <h2>Merch & Products</h2>
       <div id="shopify-embed"><div id='collection-component-1748292361713'></div>
 <script type="text/javascript">
