--- a/main.html
+++ b/main.html
@@ -9,10 +9,17 @@
   <link rel="stylesheet" href="css/player.css" />
 </head>
 <body>
-  <header>
-    <img src="assets/caev logo.png" class="top-left" />
-    <img src="assets/JJ_LOGO.png" class="top-right" />
-  </header>
+<header class="floating-header">
+  <div class="logo-stack">
+    <img src="assets/caev logo.png" class="logo-caev" />
+    <img src="assets/JJ_LOGO.png" class="logo-jj" />
+  </div>
+  <nav class="main-nav">
+    <a href="#album">ALBUM</a>
+    <a href="#event">EVENT</a>
+    <a href="#store">STORE</a>
+  </nav>
+</header>
 
   <main>
     <div class="player-container">
