--- a/main.html
+++ b/main.html
@@ -20,9 +20,7 @@
     </nav>
   </div>
 </header>
-
-
-  <main>
+  <main><br><br><br>
     <div class="player-container">
       <div class="player-header">
         <div class="album-header">
