--- a/unlocked.html
+++ b/unlocked.html
@@ -13,15 +13,14 @@
   <div class="logo-stack">
     <img src="assets/caev logo.png" class="logo-caev" />
     <img src="assets/JJ_LOGO.png" class="logo-jj" />
+    <nav class="main-nav">
+      <a href="#album">ALBUM</a>
+      <a href="#event">EVENT</a>
+      <a href="#store">STORE</a>
+    </nav>
   </div>
-  <nav class="main-nav">
-    <a href="#album">ALBUM</a>
-    <a href="#event">EVENT</a>
-    <a href="#store">STORE</a>
-  </nav>
 </header>
-
-  <main>
+  <main><br><br><br>
     <div class="player-container">
       <div class="player-header">
         <div class="album-header">
