--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
   </div>
 </header>
   <main><br><br><br>
-    <div class="player-container">
+    <div class="player-container" id="album">
       <div class="player-header">
         <div class="album-header">
           <img src="assets/COVER_ART.jpeg" alt="Album Art" class="album-art"/>
@@ -132,7 +132,7 @@
       </div>
     </div>
 
-<div class="release-party-container">
+<div class="release-party-container" id="event">
   <h2 class="release-title">JUNGLE JUXE ALBUM RELEASE PARTY</h2>
   <div class="release-video-wrapper">
     <video class="release-video" id="releaseVideo" src="assets/jj_party.mp4" playsinline preload="auto" muted></video>
@@ -158,7 +158,7 @@
 </script>
 
     
-    <div class="shopify-container">
+    <div class="shopify-container" id="store">
       <h2>Merch & Products</h2>
       <div id="shopify-embed"><div id='collection-component-1748292361713'></div>
 <script type="text/javascript">
