--- a/main.html
+++ b/main.html
@@ -10,15 +10,12 @@
 </head>
 <body>
 <header class="floating-header">
-  <div class="logo-stack">
-    <img src="assets/caev logo.png" class="logo-caev" />
-    <img src="assets/JJ_LOGO.png" class="logo-jj" />
-    <nav class="main-nav">
-      <a href="#album">ALBUM</a>
-      <a href="#event">EVENT</a>
-      <a href="#store">STORE</a>
-    </nav>
-  </div>
+  <img src="assets/header_logo.png" class="header-logo" alt="JungleJuixe Logo" />
+  <nav class="main-nav">
+    <a href="#album">ALBUM</a>
+    <a href="#event">EVENT</a>
+    <a href="#store">STORE</a>
+  </nav>
 </header>
   <main><br><br><br>
     <div class="player-container" id="album">
