--- a/main.html
+++ b/main.html
@@ -10,13 +10,16 @@
 </head>
 <body>
 <header class="floating-header">
-  <img src="assets/header_logo.png" class="header-logo" alt="JungleJuixe Logo" />
-  <nav class="main-nav">
-    <a href="#album">ALBUM</a>
-    <a href="#event">EVENT</a>
-    <a href="#store">STORE</a>
-  </nav>
+  <div class="header-wrapper">
+    <img src="assets/header_logo.png" class="header-logo" alt="JungleJuixe Logo" />
+    <nav class="main-nav">
+      <a href="#album">ALBUM</a>
+      <a href="#event">EVENT</a>
+      <a href="#store">STORE</a>
+    </nav>
+  </div>
 </header>
+
   <main><br><br><br>
     <div class="player-container" id="album">
       <div class="player-header">
