--- a/unlocked.html
+++ b/unlocked.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header class="floating-header">
-  <div class="header-wrapper">
+  <div class="header-inner">
     <img src="assets/header_logo.png" class="header-logo" alt="JungleJuixe Logo" />
     <nav class="main-nav">
       <a href="#album">ALBUM</a>
