--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
     </nav>
   </div>
 </header>
-  <main><br><br><br><br><br><br><br>
+  <main><br/><br/><br/><br/><br/><br/><br/>
     <div class="player-container" id="album">
       <div class="player-header">
         <div class="album-header">
