--- a/unlocked.html
+++ b/unlocked.html
@@ -20,7 +20,7 @@
   </div>
 </header>
 
-  <main><br><br><br>
+  <main><br/><br/><br/><br/><br/><br/><br/><br/>
     <div class="player-container" id="album">
       <div class="player-header">
         <div class="album-header">
