--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <div class="email-wall">
-    <video class="logo" src="assets/caev_jungle.mp4" autoplay muted playsinline onended="this.pause(); this.currentTime = this.duration;" preload="auto"></video>
-    <h1>ENTER EMAIL FOR ACCESS</h1>
-    <input type="email" id="userEmail" placeholder="your@email.com" />
-    <button onclick="grantAccess()">Enter</button>
+  <div class="email-wall-wrapper">
+    <div class="email-wall">
+      <video class="logo" src="assets/caev_jungle.mp4" autoplay muted playsinline onended="this.pause(); this.currentTime = this.duration;" preload="auto"></video>
+      <h1>ENTER EMAIL FOR ACCESS</h1>
+      <input type="email" id="userEmail" placeholder="your@email.com" />
+      <button onclick="grantAccess()">Enter</button>
+    </div>
   </div>
   <script src="js/script.js"></script>
 </body>
