--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JungleJuixe Main</title>
+  <title>CAEV - Jungle Juxe (2025)</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/player.css" />
 </head>
