--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <button onclick="grantAccess()">Enter</button>
     </div>
   </div>
+  <footer class="site-footer">&copy; 2025 Lost & Found Records</footer>
   <script src="js/script.js"></script>
 </body>
 </html>
