--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
       <img src="assets/header_logo.png" class="header-logo" />
       <nav class="main-nav">
         <a href="#album">ALBUM</a>
-        <a href="#event">EVENT</a>
+        <a href="#event">RELEASE PARTY</a>
         <a href="#store">STORE</a>
       </nav>
     </div>
