--- a/main.html
+++ b/main.html
@@ -19,6 +19,8 @@
       </nav>
     </div>
   </header>
+<div class="section-spacer"></div>
+  <div class="section-spacer"></div>
 
   <main>
     <section id="album">
