--- a/main.html
+++ b/main.html
@@ -45,16 +45,14 @@
     </section>
 
     <section id="event">
-      <div class="release-party-container">
-        <h2 class="release-title">JUNGLEJUIXE RELEASE PARTY</h2>
-        <div class="release-video-wrapper">
-          <video class="release-video" controls src="assets/release_party.mp4" poster="assets/COVER_ART.jpeg"></video>
-        </div>
-        <div class="ticket-link">
-          <a href="https://www.eventbrite.com/e/mass-represent-tickets-1308546681349" target="_blank">
-            <button>GET TICKETS</button>
-          </a>
-        </div>
+  <div class="release-video-wrapper">
+    <video class="release-video" id="releaseVideo" src="assets/jj_party.mp4" playsinline preload="auto" muted loop></video>
+  </div>
+  <div class="ticket-link">
+    <a href="https://posh.vip/e/junglejuxe-release-party-1" target="_blank">
+      <button>Get Tickets</button>
+    </a>
+  </div>
       </div>
     </section>
 
