--- a/main.html
+++ b/main.html
@@ -46,7 +46,9 @@
 
     <section id="event">
   <div class="release-video-wrapper">
-    <video class="release-video" id="releaseVideo" src="assets/jj_party.mp4" playsinline preload="auto" muted loop></video>
+    <video class="release-video" id="releaseVideo" src="assets/jj_party.mp4" autoplay muted loop playsinline preload="auto">
+  Your browser does not support the video tag.
+</video>
   </div>
   <div class="ticket-link">
     <a href="https://posh.vip/e/junglejuxe-release-party-1" target="_blank">
