--- a/main.html
+++ b/main.html
@@ -19,10 +19,8 @@
       </nav>
     </div>
   </header>
-  <main>
+  <main><br/><br/><br/><br/><br/><br/><br/>
     <section id="album">
-      <div class="section-spacer"></div>
-  <div class="section-spacer"></div>
       <div class="music-player">
         <img src="assets/COVER_ART.jpeg" class="album-cover" />
         <h2>JungleJuixe by CAEV</h2>
