--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JungleJuixe Main</title>
+  <title>JungleJuxe Main</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/player.css" />
 </head>
@@ -23,7 +23,7 @@
     <section id="album">
       <div class="music-player">
         <img src="assets/COVER_ART.jpeg" class="album-cover" />
-        <h2>JungleJuixe by CAEV</h2>
+        <h2>JungleJuxe by CAEV</h2>
         <p>30-second previews below</p>
 
         <audio controls src="previews/track1.mp3"></audio>
@@ -261,8 +261,8 @@ options: {
 </div>
     </section>
 
-    <footer class="site-footer">
-      &copy; 2025 JungleJuixe. All rights reserved.
+    <footer class="site-footer">Lost & Found Records &trade;<br/>
+      &copy; 2025 JungleJuxe. All rights reserved.
     </footer>
   </main>
 
