--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <button onclick="grantAccess()">Enter</button>
     </div>
   </div>
-  <footer class="site-footer">&copy; 2025 Lost & Found Records</footer>
+  <footer class="site-footer">Lost & Found Records &trade;<br/>
+      &copy; 2025 JungleJuxe. All rights reserved.</footer>
   <script src="js/script.js"></script>
 </body>
 </html>
