--- a/main.html
+++ b/main.html
@@ -21,25 +21,116 @@
   </header>
   <main><br/><br/><br/><br/><br/><br/><br/>
     <section id="album">
-      <div class="music-player">
-        <img src="assets/COVER_ART.jpeg" class="album-cover" />
-        <h2>JungleJuxe by CAEV</h2>
-        <p>30-second previews below</p>
+<div class="player-container" id="album">
+<div class="player-header">
+<div class="album-header">
+<img src="assets/COVER_ART.jpeg" alt="Album Art" class="album-art"/>
+<div class="album-info">
+<h1>JungleJuxe</h1>
+<p>by CAEV</p>
+<p class="note">Preview: 30s per track</p>
+</div>
+</div>
+<button class="purchase-btn-top" onclick="purchaseAlbum()">Buy $10.99</button>
+</div>
+<div class="track-scroll-container">
+<div class="track-list">
 
-        <audio controls src="previews/track1.mp3"></audio>
-        <audio controls src="previews/track2.mp3"></audio>
-        <audio controls src="previews/track3.mp3"></audio>
-        <audio controls src="previews/track4.mp3"></audio>
-        <audio controls src="previews/track5.mp3"></audio>
-        <audio controls src="previews/track6.mp3"></audio>
-        <audio controls src="previews/track7.mp3"></audio>
-        <audio controls src="previews/track8.mp3"></audio>
-        <audio controls src="previews/track9.mp3"></audio>
-        <audio controls src="previews/track10.mp3"></audio>
-        <audio controls src="previews/track11.mp3"></audio>
+<div class="track">
+<div class="track-info">
+<span>Track 1</span>
+<span>CAEV</span>
+</div>
+<audio controls preload="none" src="previews/track1.mp3"></audio>
+</div>
 
-        <p><strong>Buy full album to unlock all tracks + download</strong></p>
-      </div>
+<div class="track">
+<div class="track-info">
+<span>Track 2</span>
+<span>CAEV</span>
+</div>
+<audio controls preload="none" src="previews/track2.mp3"></audio>
+</div>
+
+<div class="track">
+<div class="track-info">
+<span>Track 3</span>
+<span>CAEV</span>
+</div>
+<audio controls preload="none" src="previews/track3.mp3"></audio>
+</div>
+
+<div class="track">
+<div class="track-info">
+<span>Track 4</span>
+<span>CAEV</span>
+</div>
+<audio controls preload="none" src="previews/track4.mp3"></audio>
+</div>
+
+<div class="track">
+<div class="track-info">
+<span>Track 5</span>
+<span>CAEV</span>
+</div>
+<audio controls preload="none" src="previews/track5.mp3"></audio>
+</div>
+
+<div class="track">
+<div class="track-info">
+<span>Track 6</span>
+<span>CAEV</span>
+</div>
+<audio controls preload="none" src="previews/track6.mp3"></audio>
+</div>
+
+<div class="track">
+<div class="track-info">
+<span>Track 7</span>
+<span>CAEV</span>
+</div>
+<audio controls preload="none" src="previews/track7.mp3"></audio>
+</div>
+
+<div class="track">
+<div class="track-info">
+<span>Track 8</span>
+<span>CAEV</span>
+</div>
+<audio controls preload="none" src="previews/track8.mp3"></audio>
+</div>
+
+<div class="track">
+<div class="track-info">
+<span>Track 9</span>
+<span>CAEV</span>
+</div>
+<audio controls preload="none" src="previews/track9.mp3"></audio>
+</div>
+
+<div class="track">
+<div class="track-info">
+<span>Track 10</span>
+<span>CAEV</span>
+</div>
+<audio controls preload="none" src="previews/track10.mp3"></audio>
+</div>
+
+<div class="track">
+<div class="track-info">
+<span>Track 11</span>
+<span>CAEV</span>
+</div>
+<audio controls preload="none" src="previews/track11.mp3"></audio>
+</div>
+
+</div>
+</div>
+<div class="unlock-banner">
+<p>Unlock full album for $10.99</p>
+<button onclick="purchaseAlbum()">Purchase via Stripe</button>
+</div>
+</div>
     </section>
 
     <section id="event">
