--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
   </header>
   <main><br/><br/><br/><br/><br/><br/><br/>
     <section id="album">
-<div class="player-container" id="album">
+<div id="album">
 <div class="player-header">
 <div class="album-header">
 <img src="assets/COVER_ART.jpeg" alt="Album Art" class="album-art"/>
