--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
       </nav>
     </div>
   </header>
-  <main><br/><br/><br/><br/><br/><br/><br/>
+  <main><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     <section id="album">
 <div id="album">
 <div class="player-header">
