--- a/index.html
+++ b/index.html
@@ -12,52 +12,59 @@
     <div class="email-wall">
       <img src="assets/header_logo.png" alt="JungleJuxe Logo" class="logo" />
 
-      <form id="emailForm">
-        <input type="email" id="emailInput" placeholder="Enter your email" required />
-        <button type="submit">Unlock</button>
-      </form>
+      <form onsubmit="submitEmail(event)">
+  <input type="email" id="emailInput" placeholder="Enter your email" required />
+  <button type="submit">Enter</button>
+</form>
+
       <p id="emailFeedback"></p>
     </div>
   </div>
+<!-- Firebase Scripts -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
 
-  <!-- Firebase Setup -->
-  <script type="module">
-    // Firebase SDKs
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+<script>
+  // Your Firebase config
+  const firebaseConfig = {
+    apiKey: "AIzaSyCsh8EAZvb3d0SbxlLX7gu_ifcDzHywZj4",
+    authDomain: "junglejuxe-2ab83.firebaseapp.com",
+    projectId: "junglejuxe-2ab83",
+    storageBucket: "junglejuxe-2ab83.firebasestorage.app",
+    messagingSenderId: "249789034877",
+    appId: "1:249789034877:web:f955419c53d00cd62f1c14",
+    measurementId: "G-N4TB55X911"
+  };
 
- const firebaseConfig = {
-  apiKey: "AIzaSyCsh8EAZvb3d0SbxlLX7gu_ifcDzHywZj4",
-  authDomain: "junglejuxe-2ab83.firebaseapp.com",
-  projectId: "junglejuxe-2ab83",
-  storageBucket: "junglejuxe-2ab83.firebasestorage.app",
-  messagingSenderId: "249789034877",
-  appId: "1:249789034877:web:f955419c53d00cd62f1c14",
-  measurementId: "G-N4TB55X911"
-};
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+  // Form submit handler
+  function submitEmail(event) {
+    event.preventDefault();
+    const emailInput = document.getElementById("emailInput");
+    const email = emailInput.value.trim();
 
-    document.getElementById("emailForm").addEventListener("submit", async function (e) {
-      e.preventDefault();
-      const email = document.getElementById("emailInput").value;
+    if (!email) {
+      alert("Please enter a valid email address.");
+      return;
+    }
 
-      try {
-        await addDoc(collection(db, "emails"), {
-          email: email,
-          timestamp: new Date()
-        });
-        localStorage.setItem("userEmail", email);
-        document.getElementById("emailFeedback").textContent = "You're in!";
-        setTimeout(() => {
-          window.location.href = "main.html";
-        }, 1000);
-      } catch (error) {
-        console.error("Error saving email: ", error);
-        document.getElementById("emailFeedback").textContent = "Something went wrong. Try again.";
-      }
+    db.collection("emails").add({
+      email: email,
+      timestamp: firebase.firestore.FieldValue.serverTimestamp()
+    })
+    .then(() => {
+      alert("Thanks for signing up!");
+      emailInput.value = "";
+    })
+    .catch((error) => {
+      console.error("Error saving email:", error);
+      alert("Something went wrong. Please try again later.");
     });
-  </script>
+  }
+</script>
+
 </body>
 </html>
